devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/istio-load-balancer/devops-istio-load-balancer.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-load-balancer-deployment-blue
spec:
  selector:
    matchLabels:
      app: istio-load-balancer-blue
  template:
    metadata:
      labels:
        app: istio-load-balancer-blue
        version: 2.0.0
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:2.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-load-balancer-deployment-yellow
spec:
  selector:
    matchLabels:
      app: istio-load-balancer-yellow
  template:
    metadata:
      labels:
        app: istio-load-balancer-yellow
        version: 2.0.0
    spec:
      containers:
      - name: devops-yellow
        image: timpamungkas/devops-yellow:2.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8112
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/readiness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/liveness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 3

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-load-balancer-deployment-white
spec:
  selector:
    matchLabels:
      app: istio-load-balancer-white
  template:
    metadata:
      labels:
        app: istio-load-balancer-white
        version: 2.0.0
    spec:
      containers:
      - name: devops-white
        image: timpamungkas/devops-white:2.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8113
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/white/actuator/health/readiness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/white/actuator/health/liveness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app: istio-load-balancer-blue
spec:
  selector:
    app: istio-load-balancer-blue
  ports:
  - port: 8111
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-yellow-clusterip
  labels:
    app: istio-load-balancer-yellow
spec:
  selector:
    app: istio-load-balancer-yellow
  ports:
  - port: 8112
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-white-clusterip
  labels:
    app: istio-load-balancer-white
spec:
  selector:
    app: istio-load-balancer-white
  ports:
  - port: 8113
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-istio-load-balancer-nginx-blue
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /devops/blue
        pathType: Prefix
        backend:
          service:
            name: devops-blue-clusterip
            port:
              number: 8111
